# rag-project-template

./: .env.example  .gitignore  AGENTS.md  README.md  config.yaml  pyproject.toml  rag-project-template-gb10.code-workspace  rag-project-template.code-workspace
.cursor/: mcp.json  mcp.linux.json
.cursor/rules/: rag-reference.mdc
.kilo/: kilo.jsonc  kilo.windows.jsonc
.kilo/rules/: rag-reference.md
mcp_server/: server.py
scripts/: config.py  index.py  query.py  rag_client.py  setup.ps1  setup.sh  verify_install.py
