[project]
name = "rag-project-template"
version = "1.0.0"
description = "Template RAG avec indexation de documentation technique"
requires-python = ">=3.12"
dependencies = [
    "raganything>=1.3.0",
    "python-dotenv>=1.2.0",
    "pyyaml>=6.0.2",
    "mcp>=1.28.0",
    "lightrag-hku>=1.5.3",
    "mineru>=3.4.0",
    "paddleocr",
    "paddlex",
    "pypdfium2",
    "markdown",
    "weasyprint",
    "pygments",
    "openai",
    "torch>=2.6.0",
    "torchvision",
    "transformers",
    "gradio>=5.40.0",
    "opencv-python",
    "opencv-contrib-python",
    "numpy",
    "pandas",
    "aiohttp",
    "httpx",
    "starlette",
    "uvicorn",
    "fastapi",
    "onnxruntime",
    "scikit-image",
    "jsonschema",
    "python-multipart",
    "pyjwt",
    "cryptography",
    "tiktoken",
    "networkx",
    "tenacity",
    "google-genai",
    "google-api-core",
    "safetensors",
    "tokenizers",
    "regex",
    "accelerate",
    "loguru",
    "beautifulsoup4",
    "lxml",
    "openpyxl",
    "python-docx",
    "pypdf",
    "pdfminer.six",
    "boto3",
    "modelscope",
    "ruamel.yaml",
    "ujson",
    "shapely",
    "pyclipper",
    "coloredlogs",
    "sympy",
    "filelock",
    "requests",
    "charset-normalizer",
    "idna",
    "certifi",
    "urllib3",
    "typing-extensions",
    "annotated-types",
    "sse-starlette",
    "httpx-sse",
    "json_repair",
    "nano-vectordb",
    "xlsxwriter",
    "configparser",
    "ascii_colors",
    "huggingface_hub",
    "tqdm",
    "pillow",
    "reportlab",
    "pydantic",
    "pydantic-settings",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts", "mcp_server"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
